--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "worktools",
-  "homepage": ".",
+  "homepage": "https://convertme.com.br/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-https-redirect": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
