--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "worktools",
-  "homepage": "https://convertme.com.br/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +9,10 @@
     "antd": "^4.12.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
-    "react-https-redirect": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
